美国浪潮国际化

--- a/iwcs_webservice/src/main/resources/static/i18n/messages_en_US.properties
+++ b/iwcs_webservice/src/main/resources/static/i18n/messages_en_US.properties
@@ -17,6 +17,7 @@ callback_leave=Subtask callback: the subtask has left the storage
 callback_end=Subtask callback: subtask has ended
 send_failure=Failed to issue sub-task, main task no. :
 send_failure_2=, error message:
+point_alias_already_exist=The point alias already exists
 
 
 
