--- a/iwcs_webservice/src/main/resources/static/i18n/messages_zh_CN.properties
+++ b/iwcs_webservice/src/main/resources/static/i18n/messages_zh_CN.properties
@@ -17,3 +17,4 @@ callback_leave=子任务回调:子任务已离开储位
 callback_end=子任务回调:子任务已结束
 send_failure=子任务下发失败,主任务号:
 send_failure_2=,错误信息:
+point_alias_already_exist=该点位编号已经存在
