新增滚筒任务换车功能支持国际化

--- a/iwcs_webservice/src/main/resources/static/i18n/messages_en_US.properties
+++ b/iwcs_webservice/src/main/resources/static/i18n/messages_en_US.properties
@@ -18,21 +18,13 @@ callback_end=Subtask callback: subtask has ended
 send_failure=Failed to issue sub-task, main task no. :
 send_failure_2=, error message:
 point_alias_already_exist=The point alias already exists
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+no_task=Task doesn't exist!
+cancel_fail=Cancel failed,
+cancel_fail_2=cannot be cancelled
+cancel_fail_3=Cancel AGV task failed, please make sure the task status is correct and try again!
+change_robot_error=The car number cannot be empty!
+change_robot_error_2=Only cancelled drum task can be replaced
+change_robot_error_3=Task does not generate subtask, no need to change vehicles
+change_robot_error_4=The last sub-task of the task is not the drum task, no transfer is allowed
 
 
