--- a/iwcs_webservice/src/main/resources/static/i18n/messages_zh_CN.properties
+++ b/iwcs_webservice/src/main/resources/static/i18n/messages_zh_CN.properties
@@ -18,3 +18,18 @@ callback_end=子任务回调:子任务已结束
 send_failure=子任务下发失败,主任务号:
 send_failure_2=,错误信息:
 point_alias_already_exist=该点位编号已经存在
+no_task=任务不存在！
+cancel_fail=取消失败，处于
+cancel_fail_2=状态下的任务不可取消
+cancel_fail_3=取消AGV任务失败，请确认任务状态正确后重试！
+change_robot_error=小车号不能为空
+change_robot_error_2=只有已取消的滚筒任务才可以换车
+change_robot_error_3=任务未产生子任务,无需换车
+change_robot_error_4=任务的最后一个子任务不是滚筒任务,不允许换车
+
+
+
+
+
+
+
